<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_data">Data</string>
    <string name="menu_web">Web</string>
    <string name="menu_and">And</string>
    <string name="menu_music">Music</string>
    <string name="large_text">
"С появлением микрокомпьютеров и персональных компьютеров возникли локальные вычислительные сети"
"(ЛВС). Они позволили поднять на качественно новую ступень управление производственными объектами,"
"повысить эффективность использования компьютеров, поднять качество обрабатываемой информации,"
"начать реализацию безбумажной технологии, создать новые технологии. Объединение ЛВС и глобальных"
"сетей позволило получить доступ к мировым информационным ресурсам.\n\n"
"Введём ряд понятий.\n\n"
"Компьютеры, объединённые в сеть, делятся на основные и вспомогательные.\n\n"
"Основные компьютеры– это абонентские ПК (клиенты). Они выполняют все необходимые информационно-"
"вычислительные работы и определяют ресурсы сети.\n\n"
"Вспомогательные(серверы) служат для преобразования и передачи информации от одного компьютера к"
"другому по каналам связи и коммутационным машинам (host-серверы). К качеству и мощности серверов"
"предъявляются повышенные требования.\n\n"
"Клиент (клиентское приложение)– это приложение, посылающее запрос к серверу. Клиент отвечает за"
"обработку и вывод информации, а также за передачу запросов серверу. Компьютер клиента может быть"
"любым. В настоящее время клиентом называют и пользователя, и его компьютер, и его приложение.\n\n"
"Сервер– это специализированный компьютер, выполняющий функции по обслуживанию клиента. Он"
"распределяет ресурсы системы: принтеры, базы данных, программы, внешнюю память и т.д. Существуют сетевые,"
"файловые, терминальные, серверы баз данных, почтовые и др.\n\n"
"Сетевой сервер поддерживает выполнение функций сетевой операционной системы: управление"
"вычислительной сетью, планирование задач, распределение ресурсов, доступ к сетевой файловой системе,"
"защиту информации.\n\n"
"Host-сервер– сервер, установленный в узлах сети и решающий вопросы коммутации и доступа к сетевым"
"ресурсам: модемам, факс-модемам, серверам и др.\n\n"
"Обмен данными в сетях осуществляется сообщениями и пакетами.\n\n"
"Сообщение– порция информации, представленная в виде упорядоченной последовательности символов и"
"предназначенная для передачи по сети.\n\n"
"Пакет– часть сообщения, удовлетворяющая некоторому стандарту.\n\n"
"Коммутационная сеть образуется множеством серверов иhost-серверов, соединённых физическими"
"каналами связи, которые называют магистральными. В качестве магистральных каналов выступают"
"телефонные, коаксиальные, оптоволоконные кабели, космическая спутниковая связь, беспроводная"
"радиосвязь, медная витая пара категории\n\n"
"По способу передачи информации вычислительные сети делятся на сети коммутации каналов,"
"сети коммутации сообщений, сети коммутации пакетов и интегральные сети.\n\n"
"Первыми появились сети коммутации каналов. Чтобы передать сообщение между"
"клиентами и образуется прямое соединение. Это соединение должно оставаться неизменным"
"в течение всего сеанса. При лёгкости реализации такого способа передачи информации его недостатки заключаются"
"в низком коэффициенте использования каналов, высокой стоимости передачи данных, увеличении времени ожидания"
"других клиентов. В настоящее время прямое соединение используется в коммерческих целях.\n\n"
"При коммутации сообщений информация передаётся порциями, называемыми сообщениями."
"Прямое соединение обычно не устанавливается, а передача сообщения начинается после"
"освобождения первого канала и т.д., пока сообщение не дойдёт до адресата.\n\n"
"Host-сервер осуществляет приём сообщений, сборку, правильность передачи, маршрутизацию,"
"разборку и передачу сообщения. Достоинством коммутации сообщений является уменьшение"
"стоимости передачи данных. Недостатками – низкая скорость передачи данных и невозможность"
"проведения диалога между клиентами.\n\n"
"При   коммутации пакетовобмен производится короткими пакетами фиксированной структуры."
"Малая длина пакетов предотвращает блокировку линий связи, не даёт расти очереди"
"в узлах коммутации. Она обеспечивает быстрое соединение, низкий уровень ошибок,"
"надёжность и эффективность использования сети. Но при передаче пакета возникает"
"проблема маршрутизации.\n\n"
"Наиболее распространёнными программными способами маршрутизации являются   фиксированная"
"маршрутизация   и   маршрутизация способом кратчайшей очереди.\n\n"
"Фиксированная маршрутизацияпредполагает наличие таблицы маршрутов,"
"в которой закрепляется маршрут от одного клиента к другому, что обеспечивает простоту реализации,"
"но одновременно – неравномерную загрузку сети. Вметоде кратчайшей очередииспользуется несколько таблиц,"
"в которых каналы расставлены по приоритетам.Приоритет– преимущество канала относительно другого,"
"это функция, обратная расстоянию до адресата. Передача начинается по первому свободному каналу"
"с высшим приоритетом. При использовании этого метода задержка передачи пакета минимальна.\n\n"
"Сети, обеспечивающие коммутацию каналов, сообщений и пакетов, называются"
"  интегральными. Они объединяют несколько коммутационных сетей."
"Часть интегральных каналов используется монопольно, то есть для прямого соединения."
"Прямые каналы создаются на время проведения сеанса связи между различными коммутационными сетями."
"По окончании сеанса прямой канал распадается на независимые магистральные каналы."
"Интегральная сеть эффективна, если объём информации, передаваемой по прямым каналам,"
"не превышает 10 – 15%.\n\n"
"Сетевую технологию обеспечивает сетевая операционная система."
"Наиболее популярными сетевыми операционными системами являются   Windows NTиLinux,"
"совместимая с 2000 года с приложениями Unix."
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_high">Высота</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_filechanger">Создание зашифрованного файла</string>
    <string name="menu_collage">Создание коллажа</string>
    <string name="menu_micro">Микрофон</string>
    <string name="menu_zaved">Заведения</string>
    <string name="app_name1"> FirebaseAuth </string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate
with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified:
%2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for de-
tails.</string>
</resources>