<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.bandurin.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.bandurin.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.bandurin.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.bandurin.mireaproject.ui.data.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_web"
        android:name="ru.mirea.bandurin.mireaproject.ui.web.WebFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.bandurin.mireaproject.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_high"
        android:name="ru.mirea.bandurin.mireaproject.ui.high.HighFragment"
        android:label="@string/menu_high"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_filechanger"
        android:name="ru.mirea.bandurin.mireaproject.ui.filechanger.FileChangerFragment"
        android:label="@string/menu_filechanger"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_collage"
        android:name="ru.mirea.bandurin.mireaproject.ui.collage.CollageFragment"
        android:label="@string/menu_collage"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_micro"
        android:name="ru.mirea.bandurin.mireaproject.ui.micro.MicroFragment"
        android:label="@string/menu_micro"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_zaved"
        android:name="ru.mirea.bandurin.mireaproject.ui.zaved.ZavedFragment"
        android:label="@string/menu_zaved"
        tools:layout="@layout/fragment_slideshow" />

</navigation>